# gnubg-web

./: README.md  build.sh  gnubg_web.html  graphics.js  help.html
glib/glib-2.62.0/_build/: .ninja_deps  .ninja_log
glib/glib-2.62.0/_build/glib/: glibconfig.h
glib/glib-2.62.0/glib/: gfileutils.c  gfileutils.c~  gfileutils.h  gfileutils.h~  glib-object.h  glib.h~  gstrfuncs.c
glib/glib-2.62.0/subprojects/libffi/: .gitlab-ci.yml  meson.build
glib/glib-2.62.0/subprojects/libffi/include/: ffi.h.in
glib/glib-2.62.0/subprojects/libffi/src/: meson.build
glib/glib-2.62.0/subprojects/proxy-libintl/: meson.build
gnubg/: AUTHORS  ChangeLog  INSTALL  NEWS  README  TODO  analysis.c  analysis.h  backgammon.h  bearoff.c  bearoff.h  bearoffgammon.c  bearoffgammon.h  boarddim.h  boardpos.c  boardpos.h  commands.inc  common.h  config.h  copying.c  credits.c  credits.h  credits.sh  dbprovider.c  dbprovider.h  dice.c  dice.h  drawboard.c  drawboard.h  eval.c  eval.h  evallock.c  export.c  export.h  external.h  file.c  file.h  format.c  format.h  formatgs.c  (+58 more)
gnubg/doc/: ChangeLog  Makefile.am  Makefile.in  allabout.xml  bearoffdump.6  gnubgdb.xml  gnubgman.xml  makebearoff.6  makehyper.6  makeweights.6
gnubg/doc/gnubg/: allabout.html  gnubg.6  gnubg.html  gnubg.info  gnubg.texi
gnubg/lib/: ChangeLog  Makefile.am  Makefile.in  cache.c  cache.h  gnubg-types.h  inputs.c  isaac.c  isaac.h  isaacs.h  list.c  list.h  md5.c  md5.h  mm_malloc.h  mt19937ar.c  mt19937ar.h  neuralnet.c  neuralnet.h  neuralnetsse.c  sigmoid.h  simd.h
gnubg/removed_files/: bearoffdump.c  external.c  external_l.c  external_l.l  external_y.c  external_y.h  external_y.y  glib-ext.c  glib-ext.h  gnubgmodule.c  gnubgstock.c  gnubgstock.h  gtk-multiview.c  gtk-multiview.h  gtkboard.c  gtkboard.h  gtkchequer.c  gtkchequer.h  gtkcube.c  gtkcube.h  gtkexport.c  gtkexport.h  gtkfile.c  gtkfile.h  gtkgame.c  gtkgame.h  gtkgamelist.c  gtklocdefs.c  gtklocdefs.h  gtkmet.c  gtkmet.h  gtkmovefilter.c  gtkmovefilter.h  gtkmovelist.c  gtkmovelistctrl.c  gtkmovelistctrl.h  gtkoptions.c  gtkoptions.h  gtkpanels.c  gtkpanels.h  (+24 more)
gnubg/removed_files/win32/: Makefile.am  Makefile.in  gnubg-gui.rc  gnubg-nogui.rc
gnubg/sounds/: ChangeLog  Makefile.am  Makefile.in
packaged_files/.gnubg/: gnubgrc
packaged_files/met/: ChangeLog  Kazaross-XG2.xml  Makefile.am  Makefile.in  README  Rockwell-Kazaross.xml  catalog.dtd  catalog.xml  jac050.xml  jac100.xml  jacobs.xml  mec.xml  mec26.xml  met.dtd  met.xsl  ortega.xml  snowie.xml  woolsey.xml  zadeh.xml
